<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:id="@+id/imgAccount"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/circle_icon_stock" />

            <TextView
                android:id="@+id/icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:fontFamily="@font/robo_regular"
                android:text="M"
                android:textSize="24dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgAccount"
            app:layout_constraintTop_toTopOf="@+id/imgAccount">

            <TextView
                android:id="@+id/s_txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robo_bold"
                android:text="Mark"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robo_regular"
                android:text="Created by"
                android:textColor="@color/darkgrey"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/s_txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/robo_bold"
                android:text="€ 25,23"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/robo_regular"
                android:text="Total Bill"
                android:textColor="@color/darkgrey"
                android:textSize="14dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/s_txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/robo_medium"
        android:singleLine="false"
        android:ellipsize="end"
        android:text="Cinema"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/s_txtDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/s_txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="17 Aprile 2021"
        android:fontFamily="@font/robo_medium"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/txtYouPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="You pay for:"
        android:fontFamily="@font/robo_regular"
        android:textSize="36dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_txtTitle" />

    <TextView
        android:id="@+id/s_txtShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/robo_bold"
        android:text="€ 10,25"
        android:textColor="@color/white"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtYouPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtYouPay" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:background="@drawable/white_card"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYouPay">


        <Button
            android:id="@+id/s_btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Send with PayPal"
            android:fontFamily="@font/robo_regular"
            android:textSize="18dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/fill_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/s_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/fragment_split_user"
            app:layout_constraintBottom_toTopOf="@+id/s_btnSend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>