...
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SENDER_ID">1001564553157</string>
    <string name="DATE">"DATE"</string>
    <string name="USER">"USER"</string>
    <string name="SPLIT">"SPLIT"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="notificationSend">"Done! You've send a notification to all user!</string>
    <string name="notificationAlreadySend">"Wait! You've already send a notification to all user!</string>
    <string name="titlePaid">"Confirming Payment"</string>
    <string name="titleNotPaid">Undo Payment</string>
    <string name="contentPaid">Do you want to confirm the payment?</string>
    <string name="contentNotPaid">Do you want to undo the payment?</string>
    <string name="insufficientBalance">" Can't Send Money:\nInsufficient Balance"</string>
    <string name="incorrectCredential">" Incorrect credential\n please retry"</string>
    <string name="noPhoneNumber">"Please insert your phone number to complete registration"</string>
    <string name="registrationSuccess">"Registration successful"</string>
    <string name="emptyField">"Please insert data for registration"</string>
    <string name="loginSuccess">"Login Successful"</string>
    <string name="emptyTitle">"Title can't be empty!"</string>
    <string name="emptyTotal">"Total can't be empty!"</string>
    <string name="emptyFriend">"Friends list can't be empty!"</string>
    <string name="closeTitle">"Closing Split"</string>
    <string name="closeMessage">"Are you sure to close this Split? </string>
    <string name="deleteTitle">"Deleting Split"</string>
    <string name="deleteMessage">"Are you sure to delete this Split? </string>
    <string name="payPalSuccess">"PayPal Linked Successfully"</string>
    <string name="payPaError">"Incorrect Credentials! Please Retry"</string>




...
