<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/detail_menu_group"
        android:visible="false">
        <item
            android:icon="@drawable/ic_unselected_checkbox"
            android:id="@+id/action_modify"
            android:title="Modify Percentages"
            app:showAsAction="withText">
        </item>
        <item
            android:icon="@drawable/ic_password"
            android:id="@+id/action_close"
            android:title="Close the Split"
            app:showAsAction="withText">
        </item>
        <item
            android:icon="@drawable/ic_password"
            android:id="@+id/action_delete"
            android:title="Delete the Split"
            app:showAsAction="withText">
        </item>
    </group>
</menu>